--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     }
 
     .card {
-      width: 250px;
+      width: 270px;
       padding: 12px;
       background-color: var(--card-white);
       font-family: 'Outfit', sans-serif;
@@ -52,6 +52,7 @@
 
     .card-description {
       text-align: center;
+      padding: 0 15px;
     }
 
     .card img {
